@@ -3,6 +3,8 @@ Version 1.0.0
   - Add function oracle_diag(name) for diagnostic purposes.
     ATTENTION: Use "ALTER EXTENSION oracle_fdw UPDATE" when upgrading
     from a previous version of oracle_fdw.
+  - Avoid unnecessary local filtering for pushed down WHERE clauses with
+    internal parameters.
 
   Bugfixes:
   - Fix logic error that keeps Oracle connections from closing.
